@@ -5,6 +5,8 @@ Features
      http://www.lavrsen.dk/twiki/bin/view/Motion/PreCaptureRedesign (Dag Erlandsson).
    * Added preview center feature.
      http://www.lavrsen.dk/twiki/bin/view/Motion/PreviewCenter (Dag Erlandsson).	
+   * Removed low_cpu feature, as it is not really compatible with pre_capture and a lot of other
+     features rely on the pre_capture buffer behind the scenes. (Joerg Weber)
 
 Bugfixes
    * Handle mjpeg decoding and fix color issue adding mjpegtools dependecy
